# aws-task-1

./: README.md  main.py  pyproject.toml
aws_cli/: bucket_operations.py  ec2_operations.py  init_client.py  rds_operations.py
